--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "types": ["vite/client"],
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+  "moduleResolution": "bundler",
+  "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": true,
