--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "dev-tools",
   "private": true,
   "type": "module",
   "scripts": {
@@ -47,12 +47,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "csso": "^5.0.5",
     "culori": "^3.3.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
+    "postcss": "^8.4.49",
+    "postcss-nesting": "^12.1.1",
+    "prettier": "^3.3.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
@@ -69,6 +73,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/csso": "^5.0.4",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
