--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwindcss": "^4.0.6",
     "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
+    "yaml": "^2.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
