--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
     "vaul": "^1.1.2",
