--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "dev-tools",
+  "version": "1.0.0",
+  "description": "A collection of tools for development",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "private": true,
   "type": "module",
   "scripts": {
